Quick implementation of world and pathfinding

--- a/resources/assets/default.conf
+++ b/resources/assets/default.conf
@@ -3,7 +3,7 @@
 # CLI Log level (FINEST > FINER > FINE > INFO > WARNING > SEVERE)
 log-level=INFO
 
-# Minecraft account username (must be at least 3 characters but no than 20)
+# Minecraft account username (must be at least 3 characters but no longer than 20)
 username=MCBot
 
 # Minecraft account password (leave blank to not authenticate with mojang)
