--- a/.classpath
+++ b/.classpath
@@ -72,5 +72,7 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/MCBot/resources/libraries/javadocs/sphinx4-data-5prealpha-20160628.232535-10-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="resources/libraries/jars/arduino.jar"/>
+	<classpathentry kind="lib" path="resources/libraries/jars/jSerialComm-1.3.11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
