Allow all players access on asterisk friends config

--- a/resources/assets/default.conf
+++ b/resources/assets/default.conf
@@ -1,7 +1,7 @@
 # MC Bot Configuration File
 
 # CLI Log level (FINEST > FINER > FINE > INFO > WARNING > SEVERE)
-log-level=FINEST
+log-level=INFO
 
 # Minecraft account username (must be at least 3 characters but no longer than 20)
 username=MCBot
