--- a/.classpath
+++ b/.classpath
@@ -17,10 +17,10 @@
 	<classpathentry kind="lib" path="resources/libraries/jars/jline-2.14.5.jar"/>
 	<classpathentry kind="lib" path="resources/libraries/jars/luaj-jse-3.0.1.jar"/>
 	<classpathentry kind="lib" path="resources/libraries/jars/mcauthlib-1.1-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="resources/libraries/jars/mcprotocollib-1.13.2-1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="resources/libraries/jars/mcprotocollib-1.13.2-1-SNAPSHOT.jar" sourcepath="resources/libraries/sources/mcprotocollib-1.13.2-1-SNAPSHOT-sources.jar"/>
 	<classpathentry kind="lib" path="resources/libraries/jars/netty-all-4.1.33.Final.jar"/>
 	<classpathentry kind="lib" path="resources/libraries/jars/opennbt-1.2-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="resources/libraries/jars/packetlib-1.4-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="resources/libraries/jars/packetlib-1.4-SNAPSHOT.jar" sourcepath="resources/libraries/sources/packetlib-1.4-SNAPSHOT-sources.jar"/>
 	<classpathentry kind="lib" path="resources/libraries/jars/picocli-3.9.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
